discussion/kv_engine/126496/126496_rev13_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-30044: Modernize using clang-tidy google-explicit-constructor

This adds the explicit keyword to simple cases that do not require
further changes to use an explicit constructor. However, in some cases
some refactoring related to the stream operator<< are made to ensure
they're in the correct namespace, to allow use will spdlog.

Change-Id: I08c088767152793e99c3d8e5a368a0adb1dfcbb3

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Richard de Mellow
Date: 2020-07-07 16:23:57.000000000
Message: 
Uploaded patch set 13.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-07-07 17:13:13.000000000
Message: 
Patch Set 13: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3254/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2: error: "Include threadlocal.h instead" [clang-diagnostic-error]
#error "Include threadlocal.h instead"
 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:31: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:53: error: cannot initialize a parameter of type "int" with an rvalue of type "nullptr_t" [clang-diagnostic-error]
    explicit ThreadLocalPosix(ThreadLocalDestructor dtor = nullptr)
                                                    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:36:53: note: passing argument to parameter "dtor" here
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:88:5: error: unknown type name "ThreadLocalDestructor" [clang-diagnostic-error]
    ThreadLocalDestructor dtor;
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/include/xattr/blob.h:47:35: warning: do not declare C-style arrays, use std::array<> instead [modernize-avoid-c-arrays]
    explicit Blob(std::unique_ptr<char[]>& allocator_, size_t size = 0)
                                  ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3254/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/threadlocal_posix.h:20:2:
error: "Include threadlocal.h instead" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/3254/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/1761/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/25078/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/29060/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/3715/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/4681/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/4784/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/4608/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/12503/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2020-07-08 08:49:13.000000000
Message: 
Patch Set 13: Verified+1

Overriding build bot and +1 as clang-tidy failure is not related to these code changes.
----------------------------------------------------------------------------------------------------------------------
Author: Richard de Mellow
Date: 2020-07-08 08:49:16.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
Author: Dave Rigby
Date: 2020-07-08 08:57:39.000000000
Message: 
Patch Set 13: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
